# dump1090curses

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  dump1090curses.props  health.props  id_rsa.pub  pyproject.toml  regserver.props  requirements-dev.txt  requirements.txt  rr1.py  shelve_planes.db  tomltest.py  updates.txt  vv
.github/workflows/: black.yml  generate_version.yml
features/: api_endpoints.feature  environment.py
features/steps/: steps_api.py
nbproject/: project.properties  project.xml
scripts/: generate_version.py  radar.bsh  radar.py  read-reg.bsh  read-reg.bsh.bsh  read-regs.py  run_radar.py
src/: CreateRegDB.py  PyRadar.py  RegDBSetup.sql  UpdateRegDB.py  _version.py  add_plane.py  anto_parse.py  anto_scrape.py  curs.py  curses_and_threads.py  egpf_scrape.py  equip_update.py  err  eurocontrol_grab.sh  eurocontrol_scrape.py  fetchreg.py  grab.py  health.py  ip.py  load_aircraft_db.py  load_opensky_db.py  log2dump.py  migrate.py  ngrok_url.py  olist.py  plane.py  planespotter.py  radar.py  read1090.py  read2.py  read3.py  read_regs.py  regedit.py  regserver.py  scraperegs.py  setup.py  skystef_scrape.py  socketradar.py  t1.py  t2.py  (+4 more)
src/dump1090curses/: __init__.py  _version.py  add_plane.py  curses_and_threads.py  egpf_scrape.py  eurocontrol_scrape.py  grab.py  health.py  ip.py  kill_radar.sh  load_aircraft_db.py  plane.py  read1090.py  regedit.py  regserver.py  run_radar.py  scraperegs.py  sighandler.py  t1.py  test_dump_server.py  wsgi.py  (+1 more)
tests/: plane_test.py  planespotter_tests.py
(+10 files in other folders)
