[project]
name = "dump1090curses"
version = "0.1.0"
description = ""
authors = [
    {name = "MrT",email = "drewtuley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (==25.12.0)",
    "blinker (==1.9.0)",
    "certifi (==2025.11.12)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "expiringdict (==1.2.2)",
    "flask (==3.1.2)",
    "greenlet (==3.3.0)",
    "gunicorn (>=20.0)",
    "idna (==3.11)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "nose (==1.3.7)",
    "persist-queue (==1.1.0)",
    "persistqueue (==0.1.6)",
    "requests (==2.32.5)",
    "sqlalchemy (==2.0.44)",
    "toml (==0.10.2)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.6.3)",
    "werkzeug (==3.1.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "behave (>=1.2.6)",
    "requests (>=2.31.0)"
]

[project.scripts]
run-radar = "dump1090curses.run_radar:main"
regedit = "dump1090curses.regedit:main"
